--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,10 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = LPC1768
+build_dir   = C:\tmpCompilingFiles\Marlin2.0\.pioenvs
+lib_dir     = C:\tmpCompilingFiles\Marlin2.0\.piolib
+libdeps_dir = C:\tmpCompilingFiles\Marlin2.0\.piolibdeps
 
 [common]
 default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
@@ -29,7 +32,7 @@ lib_deps =
   TMCStepper@>=0.6.2,<1.0.0
   Adafruit NeoPixel
   U8glib-HAL=https://github.com/MarlinFirmware/U8glib-HAL/archive/bugfix.zip
-  Adafruit_MAX31865=https://github.com/adafruit/Adafruit_MAX31865/archive/master.zip
+  Adafruit_MAX31865=https://github.com/smellykid101/Adafruit_MAX31865/archive/master.zip
   LiquidTWI2=https://github.com/lincomatic/LiquidTWI2/archive/master.zip
   Arduino-L6470=https://github.com/ameyer/Arduino-L6470/archive/0.8.0.zip
   SailfishLCD=https://github.com/mikeshub/SailfishLCD/archive/master.zip
@@ -223,8 +226,9 @@ src_filter        = ${common.default_src_filter} +<src/HAL/LPC1768>
 lib_deps          = Servo
   LiquidCrystal
   U8glib-HAL=https://github.com/MarlinFirmware/U8glib-HAL/archive/bugfix.zip
-  TMCStepper@>=0.6.1,<1.0.0
+  TMCStepper@>=0.6.2,<1.0.0
   Adafruit NeoPixel=https://github.com/p3p/Adafruit_NeoPixel/archive/release.zip
+  Adafruit_MAX31865=https://github.com/smellykid101/Adafruit_MAX31865/archive/master.zip
   SailfishLCD=https://github.com/mikeshub/SailfishLCD/archive/master.zip
 
 [env:LPC1769]
